[package]
authors = ["Steven Ferrer <steven.r.ferrer@gmail.com>"]
description = "Rust examples"
edition = "2021"
name = "rust-examples"
version = "0.1.0"

[[bin]]
doctest = false
name = "hello_world"
test = false

[[bin]]
doctest = false
name = "guessing_game"
test = false

[[bin]]
doctest = false
name = "variables"
test = false

[[bin]]
doctest = false
name = "slices"
test = false

[[bin]]
doctest = false
name = "structs"
test = false

[[bin]]
doctest = false
name = "enums"
test = false

[[bin]]
doctest = false
name = "vectors"
test = false

[[bin]]
doctest = false
name = "strings"
test = false

[[bin]]
doctest = false
name = "hashmaps"
test = false

[dependencies]
bson = "2.4.0"
rand = "0.8.5"
ron = "0.8.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
