[package]
authors = ["Steven Ferrer <steven.r.ferrer@gmail.com>"]
description = "Rust examples"
edition = "2021"
name = "rust-examples"
version = "0.1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
doctest = false
name = "hello_world"
test = false

[[bin]]
doctest = false
name = "guessing_game"
test = false

[[bin]]
doctest = false
name = "variables"
test = false

[[bin]]
doctest = false
name = "slices"
test = false

[[bin]]
doctest = false
name = "structs"
test = false

[[bin]]
doctest = false
name = "enums"
test = false

[[bin]]
doctest = false
name = "vectors"
test = false

[[bin]]
doctest = false
name = "strings"
test = false

[[bin]]
doctest = false
name = "hashmaps"
test = false

[[bin]]
doctest = false
name = "errors"
test = false

[[bin]]
doctest = false
name = "generics"
test = false

[[bin]]
doctest = false
name = "traits"
test = false

[[bin]]
doctest = false
name = "lifetimes"
test = false

[[bin]]
doctest = false
name = "closures"
test = false

[[bin]]
doctest = false
name = "iterators"
test = false

[[bin]]
doctest = false
name = "smart_pointers"
test = false

[[bin]]
doctest = false
name = "weak_refs"
test = false

[[bin]]
doctest = false
name = "threads"
test = false

[[bin]]
doctest = false
name = "mpsc"
test = false

[[bin]]
doctest = false
name = "mutex"
test = false

[[bin]]
doctest = false
name = "trait_objects"
test = false

[[bin]]
doctest = false
name = "blog"
test = false

[[bin]]
doctest = false
name = "patterns"
test = false

[[bin]]
doctest = false
name = "unsafe"
test = false

[[bin]]
doctest = false
name = "advanced_traits"
test = false

[dependencies]
bson = "2.4.0"
rand = "0.8.5"
ron = "0.8.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
